<resources>
    <string name="app_name">Social Narrative Builder</string>
    <string name="title_home">Home</string>
    <string name="back_button">Back</string>
    <string name="logout_button">Logout</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_adult_login">Sign in</string>
    <string name="title_activity_adult_login_long">Sign In to Your Account</string>
    <string name="no_account">Don\'t Have An Account?</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_child_login">Select your name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_username">Enter Username</string>
    <string name="prompt_new_password">Choose Password</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="prompt_new_child_name">Enter Name</string>
    <string name="prompt_avatar_select">Select Avatar</string>
    <string name="prompt_story_name">Story Name</string>
    <string name="prompt_background_colour_select">Background Colour</string>

    <string name="help">Help</string>
    <string name="read">Read</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Are you sure you want to delete this story: %s. \nThis can\'t be undone.</string>

    <string name="page">Page</string>
    <string name="sample_sentences">Sample Sentences</string>
    <string name="sound_effect">Sound Effect</string>
    <string name="your_stories">Your Stories</string>

    <string name="new_story">Create New Story</string>
    <string name="new_user">Add User</string>
    <string name="new_reader">Add New Reader</string>
    <string name="new_page">New Page</string>
    <string name="new_image">Add Image</string>
    <string name="new_sound">Add Sound</string>

    <string name="remove_image">Remove Image</string>
    <string name="remove_sound">Remove Sound</string>
    <string name="remove_page">Remove Selected Page</string>
    <string name="remove_user">Remove User</string>
    <string name="remove_reader">Remove Selected Child</string>

    <string name="edit_page">Edit Selected Page</string>
    <string name="edit_story">Edit Existing Story</string>

    <string name="page_editor">Create/Edit Pages</string>
    <string name="user_editor">Assign Readers To Story</string>

    <string name="finish_story">Finish</string>
    <string name="book_empty">Sorry this book is empty</string>

    <string name="page_no">Page: %d</string>
    <string name="incorrect_login">Sorry, incorrect login details.</string>


    <string name="child_name_error">Child name is not unique</string>
    <string name="popup_close">Close</string>
    <string name="adult_name_error">Adult username is not unique</string>
    <string name="password_error">Passwords don\'t match</string>

    <string name="story_create_help">CREATE NEW STORY takes you to the story creation page. Here you can find tips for creating a social story.</string>

    <string name="create_account">Create Account</string>
    <string name="create_account_adult">Create Adult Account</string>
    <string name="create_account_child">Create Child Account</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_adult">Create New Adult</string>
    <string name="action_register_child">Create New Child</string>
    <string name="action_register_short">Create</string>

    <string name="welcome">"Welcome, %s"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="read_story">Read Existing Story</string>
    <string name="read_edit_story">Read/Edit Existing Story</string>

    <string name="story_readers">Story can be read by:</string>
    <string name="child_select">Select Child To Add</string>

    <string name="story_select">Select Story</string>
    <string name="story_create_and_edit">Configure Story</string>

    <string name="feedback">This story makes me feel:</string>
    <string-array name="feedback_array">
        <item>@string/happy </item>
        <item>@string/sad</item>
        <item>@string/angry</item>
        <item>@string/confused </item>
    </string-array>


    <string name="happy">Happy &#128522; </string>
    <string name="sad">Sad &#128546; </string>
    <string name="angry">Angry &#128544; </string>
    <string name="confused">Confused &#128533; </string>

    <string name="view_statistic">View Statistics For Stories</string>
    <string name="child_statistic_text">Select Child</string>

    <string name="story">Story</string>
    <string name="child_name">Child</string>
    <string name="adult_name">Adult</string>
    <string name="total_reads">Total Reads</string>
    <string name="no_feedback">No Response</string>

    <string name="color_picker">Select background colour</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="yellow_orange">Yellow-Orange</string>
    <string name="yellow_green">Yellow-Green</string>
    <string name="red_orange">Red-Orange</string>
    <string name="red_purple">Red-Purple</string>
    <string name="blue_purple">Blue-Purple</string>
    <string name="blue_green">Blue-Green</string>

    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="preview">Preview</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_confirm">Are you sure you would like to cancel? \nAny unsaved changes will be lost.</string>

    <string name="next_page">Next</string>
    <string name="back_page">Back</string>
    <string name="exit_story">Exit</string>

    <string name="image_not_chosen">No Avatar Selected</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_statistic_viewer">StatisticViewer</string>

    <string name="social_story_tutorial"><u>Information On Creating A Story</u></string>
    <string name="view_tutorial">How To Use The App</string>
    <string name="tutorial_screen_title">Brief Overview Into The App</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
