<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/childColor"
    tools:context=".childactivity.ChildInitialActivity">

    <TextView
        android:id="@+id/text_create_account2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_child"
        android:textColor="@color/childText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchToChildLogin"
        android:text="@string/back_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/create_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createChild"
        android:text="@string/action_register_short"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/child_name_input"
        app:layout_constraintTop_toBottomOf="@+id/child_name_input" />

    <EditText
        android:id="@+id/child_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/prompt_new_child_name"
        android:inputType="textShortMessage|textPersonName"
        android:selectAllOnFocus="true"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:onClick="selectImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25"
        app:srcCompat="@drawable/default_avatar"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/select_avatar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="selectImage"
        android:text="@string/prompt_avatar_select"
        android:textColor="@color/childText"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>