<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/childColor"
    tools:context=".childactivity.ChildLoginActivity">

    <Button
        android:id="@+id/back_button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="back"
        android:text="@string/back_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:onClick="toChildInitial"
        android:text="@string/action_sign_in_short"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/child_accounts"
        app:layout_constraintEnd_toEndOf="@+id/register_child"
        app:layout_constraintStart_toStartOf="@+id/register_child" />

    <Button
        android:id="@+id/register_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:onClick="toChildCreate"
        android:text="@string/action_register_child"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/child_accounts" />

    <TextView
        android:id="@+id/login_prompt_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:text="@string/prompt_child_login"
        android:textColor="@color/childText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/child_accounts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.socialstorybuilder.DecoratedRecyclerView
        android:id="@+id/child_accounts"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:choiceMode="singleChoice"
        android:layout_weight="0"
        android:listSelector="@color/adultColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

    </com.example.socialstorybuilder.DecoratedRecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>